# SerialOperations

./: .gitignore  CMakeLists.txt  build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt  SerialClass.cpp  SerialClass.h  SerialLinux.cpp  SerialLinux.h  main.cpp
toolchains/: toolchainfile_imx6_armv7.cmake  toolchainfile_raspi_armv7.cmake  toolchainfile_win32_x86.cmake
